--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,32 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Navigation
+  go_router: ^14.6.2
+  
+  # State Management
+  provider: ^6.1.2
+  
+  # Dependency Injection
+  get_it: ^8.0.2
+  
+  # Local Storage (Hive)
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
+  # HTTP Client
+  http: ^1.2.2
+  
+  # Functional Programming
+  dartz: ^0.10.1
+  
+  # Utilities
+  equatable: ^2.0.7
+  connectivity_plus: ^6.1.1
+  
+  # Onboarding UI
+  intro_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
